--- a/src/index.css
+++ b/src/index.css
@@ -5,9 +5,37 @@ body {
     sans-serif;
   -webkit-font-smoothing: antialiased;
   -moz-osx-font-smoothing: grayscale;
+  background: linear-gradient(135deg, #1a0b19, #150d2d, #162134) !important;
+  color: white !important;
+  overflow-x: hidden !important;
+  width: 100vw !important;
 }
 
 code {
   font-family: source-code-pro, Menlo, Monaco, Consolas, 'Courier New',
     monospace;
 }
+
+.card {
+  background-color: #0c071d;
+  box-shadow: rgba(215, 106, 255, 0.507) 0px 0px 20px;
+  padding: 1rem;
+  border-radius: 5px;
+}
+
+.techStack {
+  color: #c24dd0;
+  border: 2px solid #c24dd0;
+  padding: 0.5re, 2rem;
+
+}
+
+.customeButton {
+  background-image: linear-gradient(150deg, #270101, #05031d);
+  color: rgb(225, 68, 240) !important;
+
+}
+
+@tailwind base;
+@tailwind components;
+@tailwind utilities;
